# cicd-pipeline-metrics-lab

./: .gitignore  EXPERIMENT_LOG.md  README.md  RELATORIO.md  ci-parallel.yml  collect_metrics.py  plot_metrics.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-parallel.yml  ci-sequential.yml
entregaveis/: README.md  RELATORIO.md
entregaveis/dados/: metrics.csv  steps.csv
entregaveis/scripts/: collect_metrics.py  run_experiment.sh  summarize_tests.py
src/datalab/: __init__.py  cleaning.py  features.py  stats.py
tests/: test_cleaning.py  test_features.py  test_invariants.py  test_stats.py  util.py
